# mcpelauncherlegacy

./: CMakeLists.txt
src/: client_app_platform.cpp  client_app_platform.h  main.cpp
